- some ui bug fixes on small screens

--- a/src/main/resources/ir/darkdeveloper/bitkip/css/dark_mode.css
+++ b/src/main/resources/ir/darkdeveloper/bitkip/css/dark_mode.css
@@ -14,6 +14,10 @@
     -fx-fill: -fx-white-color !important;
 }
 
+.hyperlink{
+    -fx-text-fill: -fx-white-color;
+}
+
 .text-field{
     -fx-background-color: -fx-primary-color2 !important;
     -fx-border-color: -fx-white-color !important;
